--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -2,7 +2,7 @@
   .row
     .span6
       p.copyrigths
-        | \&copy; 2012 &mdash; 2015 «Expres Logistic». All rights reserved.
+        | &copy; 2012 &mdash; 2015 «Expres Logistic». All rights reserved.
       .copy-studio
         img alt="" src=(" /assets/vs-logo.png")
         p
@@ -21,7 +21,7 @@
             span.proper-link orders
         li
           a href=send("services_#{I18n.locale}_path")
-            span.proper-link services
+            span.proper-link services\
         li
           a href=send("articles_#{I18n.locale}_path")
             span.proper-link articles
