--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,7 @@
 doctype html
 html
   head
-    title My App
-    meta name="keywords" content=""
-    meta name="description" content=""
+    = render_seo_tags
 
     meta name="viewport" content="width=device-width, initial-scale=1.0"
 
