--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,8 +17,10 @@
  * require internet-explorer
  */
 
+
 @import "bootsrap.css";
 @import "bootstrap-responsive.css";
+@import "mixins";
 @import "style.css";
 @import "fancybox.css";
 @import "flex-controls.css";
