--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -12,25 +12,25 @@
           li#eng-li-about-us.li-about-us.fake
             a href=about_page_path title="About"
               span#eng-hover-eff-about-us.hover-eff-about-us
-                img alt="About" src=(" /assets/hover-head-menu.png")
+                /img alt="About" src=(" /assets/hover-head-menu.png")
               | About
 
           li#eng-li-services.li-services.fake
             a href=services_path title="Services"
               span#eng-hover-eff-services.hover-eff-services
-                img alt="Services" src="/assets/hover-head-menu.png"
+                /img alt="Services" src="/assets/hover-head-menu.png"
               | services
 
           li#eng-li-our-park.li-our-park.fake
             a href=order_page_path title="Orders"
               span#eng-hover-eff-our-park.hover-eff-our-park
-                img alt="Orders" src=(" /assets/hover-head-menu.png")
+                /img alt="Orders" src=(" /assets/hover-head-menu.png")
               | Order
 
           li.li-contact.fake.eng-li-contact
             a href=contact_page_path title="Contacts"
               span.hover-eff-contact.eng-hover-eff-contact
-                img alt="Contacts" src="/assets/hover-head-menu.png"
+                /img alt="Contacts" src="/assets/hover-head-menu.png"
               | CONTACTS
 
 = content_for :home_banner
