--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -21,6 +21,46 @@ a:visited{color: #777777;}
 
 a:hover{color: #777777;}
 
+.simple_form {
+  label.required {
+    abbr {
+      display: none;
+    }
+  }
+
+  button{
+    background: none;
+    border: none;
+    outline: none;
+  }
+
+  &.contact_feedback{
+    textarea{
+      height: 236px;
+    }
+  }
+
+  label{
+    margin-left: 10px;
+    display: block;
+    text-transform: lowercase;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: normal;
+  }
+
+
+}
+
+input[type=text], input[type=email], input[type=tel], textarea {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  display: block;
+}
+
+
+
 ::selection{
 	background: rgba(242, 115, 33, 1);
 	color: white;
@@ -154,8 +194,17 @@ ul.head-menu li a{
 	font-size: 17px;
 	padding-top: 10px;
 	text-decoration: none;
+    line-height: 6rem;
 }
 
+@include keyframes(top-nav-hover-arrow){
+  0%{
+    background-position-y: 0;
+  }
+  50%{
+    background-position-y: 20px;
+  }
+}
 
 
 ul.head-menu{
@@ -165,6 +214,9 @@ ul.head-menu{
         background-image: url(/assets/hover-head-menu.png);
         background-repeat: no-repeat;
         background-position-x: center;
+        @include animation-name(top-nav-hover-arrow);
+        @include animation-duration(1s);
+        @include animation-iteration-count(infinite);
       }
     }
   }
@@ -829,7 +881,7 @@ ul.foot-menu li a{
 	padding-bottom: 20px;
 }
 
-input[type=text], input:not([type]), textarea{
+input[type=text], input[type=email], input[type=tel], input:not([type]), textarea{
 	-webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,.16);
 	-moz-box-shadow: inset 1px 1px 2px rgba(0,0,0,.16);
 	box-shadow: inset 1px 1px 2px rgba(0,0,0,.16);
@@ -840,14 +892,14 @@ input[type=text], input:not([type]), textarea{
 	background-image: -ms-linear-gradient(bottom, rgba(0,0,0,.08), rgba(255,255,255,.08));
 	background-image: linear-gradient(to top, rgba(0,0,0,.08), rgba(255,255,255,.08));
 	outline: 0 !important;
-	width: 336px;
+	//width: 336px;
 	font-style: italic;
 	padding: 15px !important;
 	font-size: 17px;
 }
 
 textarea{
-	width: 738px;
+	//width: 738px;
 	height: 186px;
 	font-family: 'PT Sans', sans-serif;
 	line-height: 25px;
@@ -894,7 +946,7 @@ sup{
 }
 
 label{
-	margin-top: -8px !important;
+	//margin-top: -8px !important;
 	color: #676767;
 	font-style: italic;
 }
@@ -1403,3 +1455,5 @@ label{
     }
   }
 }
+
+
