--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,8 +9,7 @@ html
     link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon"
 
     = stylesheet_link_tag    "application", media: 'all', 'data-turbolinks-track' => true
-    script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"
-    = javascript_include_tag "application", 'data-turbolinks-track' => true
+
     = csrf_meta_tags
 
   body#body
@@ -27,3 +26,7 @@ html
           - else
             = yield
     = render "footer"
+
+    /script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"
+    script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.13"
+    = javascript_include_tag "application"
