--- a/app/views/pages/_contact_map.html.slim
+++ b/app/views/pages/_contact_map.html.slim
@@ -1,6 +1,9 @@
 .container.contact-map
   .row
     .span12
-      #map
+      /#map
         iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?t=m&amp;hl=en-US&amp;ie=UTF8&amp;ll=49.791751,23.93348&amp;spn=0.019393,0.036478&amp;z=14&amp;output=embed"
+      #map
+        map zoom="11" center="45.500706, -73.574401" disable-default-u-i="true" style="display: block; height: 460px"
+          marker position="45.500706, -73.574401" title="Hello Marker" draggable="true" visible="true"
 
