metadata, locales, and menu css fix

--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -389,6 +389,7 @@ ul.head-menu{
 	width: 140px;
 	height: 169px;
 	vertical-align: text-top;
+    margin-top: -3px !important;
 }
 
 .service-list-car:hover,
