--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,29 +1,29 @@
 - content_for :home_banner do
-  .container-fluid.container-940
+  /.container-fluid.container-940
     .row-fluid
       .span12
-        #banner_j
-          .sliderContent
-            .item.first-slide
-              img alt="" src="/assets/el-banner-1.png"
-              .flex-info-block
-                .flex-info-block-p
-                  p cargo of any shape and size
-                  p will transport by land
-                  p to anywhere!
-            .item.third-slide
-              img alt="" src="/assets/el-banner-2.png"
-              .flex-info-block
-                .flex-info-block-p
-                  p fast and sensitive
-                  p air delivery anywhere in the world
-            /! <p>в любую точку!</p
-            .item.last-slide
-              img alt="" src="/assets/el-banner-4a.png"
-              .flex-info-block
-                .flex-info-block-p
-                  p an economical way of transporting
-                  p goods over long distances
+  #banner_j
+    .sliderContent
+      .item.first-slide
+        img alt="" src="/assets/el-banner-1.png"
+        .flex-info-block
+          .flex-info-block-p
+            p cargo of any shape and size
+            p will transport by land
+            p to anywhere!
+      .item.third-slide
+        img alt="" src="/assets/el-banner-2.png"
+        .flex-info-block
+          .flex-info-block-p
+            p fast and sensitive
+            p air delivery anywhere in the world
+      /! <p>в любую точку!</p
+      .item.last-slide
+        img alt="" src="/assets/el-banner-4a.png"
+        .flex-info-block
+          .flex-info-block-p
+            p an economical way of transporting
+            p goods over long distances
   #banner-small
     .container
       .row
