managers from admin in contacts page

--- a/app/views/pages/_contact_form.html.slim
+++ b/app/views/pages/_contact_form.html.slim
@@ -7,7 +7,7 @@
             p.orange
               img.about-img alt="" src="/assets/about-head.png"
               i
-                =
+                = t("contact.feedback_form.title")
           .span4.contact-make-full-form
             p
               = f.input_field :name
