--- a/app/views/pages/_contact_managers.html.slim
+++ b/app/views/pages/_contact_managers.html.slim
@@ -3,7 +3,8 @@
     .span4.contact-make-full
       p.orange
         img.about-img alt="" src="/assets/about-head.png" /
-        i Director to Express Logistics:
+        i
+          = t("contact.contact_managers.director")
       p.contact-page-p
         | Kuspis Marjan Josipovich
         br/
@@ -15,21 +16,23 @@
     .span4.contact-make-full
       p.orange
         img.about-img alt="" src="/assets/about-head.png" /
-        i Head of Commercial and Logistics Department:
+        i
+          = t("contact.contact_managers.head")
       p.contact-page-p
         | Soltys Pavlo
-        br/
+        br
         | +38 (067) 208-87-88
-        br/
+        br
         span.orange.email-icon @
         a href=("mailto:soltys_pavlo@expresslogistics.com.ua ")  soltys_pavlo
-        br/
+        br
     /! end span4
     /! office2 section
     .span4.contact-make-full
       p.orange
-        img.about-img alt="" src="/assets/about-head.png" /
-        i Office manager:
+        img.about-img alt="" src="/assets/about-head.png"
+        i
+          = t("contact.contact_managers.office_manager")
       p.contact-page-p
         | Zalizna Julija
         br/
