--- a/app/views/pages/_contact_submanagers.html.slim
+++ b/app/views/pages/_contact_submanagers.html.slim
@@ -3,7 +3,8 @@
     #managers-zone.contact-make-full
       p.orange style=("margin-top: 40px;margin-left: 30px;")
         img.about-img alt="" src="/assets/about-head.png" /
-        i Manager of Commercial and Logistics Department:
+        i
+          = t("contact.contact_submanagers.title")
       .span4
         p.contact-page-p
           | Borodiy Yulia
