--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -2,6 +2,9 @@
   = raw @page.managers.get_content
 
 = render "contact_map"
-= render "contact_managers"
-= render "contact_submanagers"
+- if @manager_groups.try(&:any?)
+  = render "all_managers"
+- else
+  = render "contact_managers"
+  = render "contact_submanagers"
 = render "contact_form"
