--- a/app/views/pages/_all_managers.html.slim
+++ b/app/views/pages/_all_managers.html.slim
@@ -23,7 +23,7 @@
 .container.sub-managers
   .row
     - @manager_groups.each do |group|
-      - if group.manahers.count > 1
+      - if group.managers.count > 1
         #managers-zone.contact-make-full
           p.orange style=("margin-top: 40px;margin-left: 30px;")
             img.about-img alt="" src="/assets/about-head.png" /
