--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -1,5 +1,6 @@
 .container.contact-proverb
-  = raw @page.managers.get_content
+  /= raw @page.managers.get_content
+  = html_block_with_fallback(:contact_data) do
 
 = render "contact_map"
 - if @manager_groups.try(&:any?)
