--- a/app/views/pages/contact.html.slim
+++ b/app/views/pages/contact.html.slim
@@ -1,6 +1,6 @@
 .container.contact-proverb
   /= raw @page.managers.get_content
-  = html_block_with_fallback(:contact_data) do
+  = html_block_with_fallback(:contact_data, true) do
 
 = render "contact_map"
 - if @manager_groups.try(&:any?)
