show full email

--- a/app/views/pages/_all_managers.html.slim
+++ b/app/views/pages/_all_managers.html.slim
@@ -16,7 +16,7 @@
               br
             span.orange.email-icon @
             a href="mailto:#{manager.email}"
-              = manager.email.split("@").first
+              = manager.email
             br
 
 
@@ -39,4 +39,4 @@
               p.contact-page-p
                 span.orange.email-icon @
                 a href="mailto:#{manager.email}"
-                  = manager.email.split("@").first
+                  = manager.email
