--- a/app/views/pages/_all_managers.html.slim
+++ b/app/views/pages/_all_managers.html.slim
@@ -14,7 +14,7 @@
             - if manager.phone.present?
               = manager.phone
               br
-            span.orange.email-icon @
+            /span.orange.email-icon @
             a href="mailto:#{manager.email}"
               = manager.email
             br
@@ -37,6 +37,6 @@
                 p.contact-page-p
                   = manager.phone
               p.contact-page-p
-                span.orange.email-icon @
+                /span.orange.email-icon @
                 a href="mailto:#{manager.email}"
                   = manager.email
