--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -35,4 +35,5 @@
         = t("footer_address")
         br
         = t("footer_tel")
+        |&thinsp;
         span.orange.tel +38 (032) 237 40 61
