--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -35,7 +35,8 @@ scss:
   }
 
 /= raw @content
-= html_block_with_fallback(:content, true) do
+.about-bg
+  = html_block_with_fallback(:content, true) do
 
 
 
