--- a/app/views/pages/order.html.slim
+++ b/app/views/pages/order.html.slim
@@ -28,67 +28,68 @@ scss:
     }
   }
 
-.container.service-listing
+.page-bg style=("background-image: #{@page.background_image.url}" if @page.try{|p| p.background_image.exists? } )
+  .container.service-listing
 
-      /! <h2 class="services-h2">Заказать</h2
-      = simple_form_for @order, url: "", type: "post", html: { class: "ajax-submit" } do |f|
-        .form-content
-          .row
-            .span8
-              - f.with_options placeholder: true do |f|
-                .columns.large-12
-                  .input
-                    = f.input_field :customer_firm
-                    = f.label :customer_firm
-                  .input
-                    = f.input_field :contact_name
-                    = f.label :contact_name
+        /! <h2 class="services-h2">Заказать</h2
+        = simple_form_for @order, url: "", type: "post", html: { class: "ajax-submit" } do |f|
+          .form-content
+            .row
+              .span8
+                - f.with_options placeholder: true do |f|
+                  .columns.large-12
+                    .input
+                      = f.input_field :customer_firm
+                      = f.label :customer_firm
+                    .input
+                      = f.input_field :contact_name
+                      = f.label :contact_name
 
-                  .input
-                    = f.input_field :contact_phone
-                    = f.label :contact_phone
-                  .input
-                    = f.input_field :email
-                    = f.label :email
+                    .input
+                      = f.input_field :contact_phone
+                      = f.label :contact_phone
+                    .input
+                      = f.input_field :email
+                      = f.label :email
 
-                  .input
-                    = f.input_field :transport_type
-                    = f.label :transport_type
+                    .input
+                      = f.input_field :transport_type
+                      = f.label :transport_type
 
-                  #transport-from-to-inputs
-                    = f.input_field :transport_from
-                    .mdash
-                      |&mdash;
-                    = f.input_field :transport_to
-                    = f.label :transport_from
+                    #transport-from-to-inputs
+                      = f.input_field :transport_from
+                      .mdash
+                        |&mdash;
+                      = f.input_field :transport_to
+                      = f.label :transport_from
 
-                .clear
-                .columns.large-4
-                  .input
-                    = f.input_field :transport_distance
-                    = f.label :transport_distance
-                .columns.large-4
-                  .input
-                    = f.input_field :volume
-                    = f.label :volume
-                .columns.large-4
-                  .input
-                    = f.input_field :estimated_date
-                    = f.label :estimated_date
+                  .clear
+                  .columns.large-4
+                    .input
+                      = f.input_field :transport_distance
+                      = f.label :transport_distance
+                  .columns.large-4
+                    .input
+                      = f.input_field :volume
+                      = f.label :volume
+                  .columns.large-4
+                    .input
+                      = f.input_field :estimated_date
+                      = f.label :estimated_date
 
-                .columns.large-12
-                  .input
-                    = f.text_area :comment
-                    = f.label :comment
-                  p style="text-align: right"
-                    button type="submit"
-                      img alt="" src="/assets/send.png"
+                  .columns.large-12
+                    .input
+                      = f.text_area :comment
+                      = f.label :comment
+                    p style="text-align: right"
+                      button type="submit"
+                        img alt="" src="/assets/send.png"
 
 
-        .preloader style="display: none;"
-          = image_tag("preloader.gif")
-        .success style="display: none"
-          .h1
-            = t("simple_form.success-message.order.title")
-          p
-            = t("simple_form.success-message.order.description")
+          .preloader style="display: none;"
+            = image_tag("preloader.gif")
+          .success style="display: none"
+            .h1
+              = t("simple_form.success-message.order.title")
+            p
+              = t("simple_form.success-message.order.description")
