--- a/app/views/pages/order.html.slim
+++ b/app/views/pages/order.html.slim
@@ -28,7 +28,7 @@ scss:
     }
   }
 
-.page-bg style=("background-image: #{@page.background_image.url}" if @page.try{|p| p.background_image.exists? } )
+.page-bg style=("background-image: url('#{@page.background_image.url}')" if @page.try{|p| p.background_image.exists? } )
   .container.service-listing
 
         /! <h2 class="services-h2">Заказать</h2
