--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -1,4 +1,4 @@
-.services-bg style=("background-image: #{@page.background_image.url}" if @page.try{|p| p.background_image.exists? } )
+.services-bg style=("background-image: url('#{@page.background_image.url}')" if @page.try{|p| p.background_image.exists? } )
   .container.service-listing
     .row
       - @services.each do |s|
