--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -1,4 +1,6 @@
+
 .services-bg style=("background-image: url('#{@page.background_image.url}')" if @page.try{|p| p.background_image.exists? } )
+  = html_block_with_fallback(:intro, true) do
   .container.service-listing
     .row
       - @services.each do |s|
