--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -445,7 +445,7 @@ ul.head-menu{
 }
 
 /* Wellcome message main page */
-.welcome-msg-h{
+.welcome-msg-h, #welcome-msg h1{
 	color: #f27321;
 	font-size: 38px;
 	line-height: 45px;
