--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -63,7 +63,7 @@
   .container
     .row
       .span12.proverb-main-center-txt
-        = html_block_with_fallback(:block_under_welcome_html) do
+        = html_block_with_fallback(:block_under_welcome_html, true) do
           p.proverb-main-p
           p
             | Individual approach to each customer, the service impeccable and security form the high level of trust on the part of our regular clients, which we are happy to see you!
