--- a/app/assets/stylesheets/forms.sass
+++ b/app/assets/stylesheets/forms.sass
@@ -15,6 +15,15 @@ form
 			position: absolute
 			+transform(translate(-50%, -50%))
 
+	button
+		background-image: asset_url("btn.png")
+		background-repeat: no-repeat
+		background-position: right
+		background-color: transparent
+		padding: 3px 15px
+		background-size: cover
+		color: #FFF
+		text-transform: uppercase
 
 
 .two-inputs
