--- a/app/views/pages/_contact_form.html.slim
+++ b/app/views/pages/_contact_form.html.slim
@@ -28,7 +28,7 @@
           .span12
             div style=("text-align: right;")
               button type="submit"
-                img alt="" src="/assets/send.png"
+                = t("submit-button")
 
     .preloader style="display: none;"
       = image_tag("preloader.gif")
