--- a/app/views/pages/order.html.slim
+++ b/app/views/pages/order.html.slim
@@ -84,7 +84,7 @@ scss:
                       = f.label :comment
                     p style="text-align: right"
                       button type="submit"
-                        img alt="" src="/assets/send.png"
+                        = t("submit-button")
 
 
           .preloader style="display: none;"
