--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,5 +28,5 @@ html
     = render "footer"
 
     /script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"
-    script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.13"
+    script src="//maps.google.com/maps/api/js?sensor=false&libraries=geometry&v=3.13&key=AIzaSyAvkI36T-T6xJe8Qif7QkbQ1xvTl8Ha_9o"
     = javascript_include_tag "application"
